--- a/Dashboard/Navigetion/Home.xaml
+++ b/Dashboard/Navigetion/Home.xaml
@@ -1,8 +1,10 @@
 ﻿<UserControl x:Class="RecipeCookbook.Home"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             HorizontalAlignment="Center"
+             VerticalAlignment="Center"
              Width="850"
-             Background="#E2E4EB">
+             Background="White">
 
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Hidden">
@@ -16,10 +18,9 @@
                 </Grid.RowDefinitions>
 
                 <!-- Header Section -->
-                <Border Background="#FFFFFF" 
+                <Border Background="#F5F7F8" 
                         BorderBrush="#D1D1D1" 
-                        BorderThickness="1" 
-                        CornerRadius="5" 
+                        CornerRadius="10" 
                         Padding="10" 
                         Margin="10">
                     <TextBlock Text="Home" 
@@ -29,11 +30,10 @@
                                HorizontalAlignment="Left"/>
                 </Border>
 
-
                 <!-- Featured Categories -->
                 <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
                     <WrapPanel Margin="10">
-                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4">
+                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -50,7 +50,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#FFFCEB">
+                        <Button Width="100" Height="140" Margin="5" Background="#FFFCEB" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -67,7 +67,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#ECFFEC">
+                        <Button Width="100" Height="140" Margin="5" Background="#ECFFEC" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -84,7 +84,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#FEEFEA">
+                        <Button Width="100" Height="140" Margin="5" Background="#FEEFEA" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -101,7 +101,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#FFF3EB">
+                        <Button Width="100" Height="140" Margin="5" Background="#FFF3EB" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -118,7 +118,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#FFF3FF">
+                        <Button Width="100" Height="140" Margin="5" Background="#FFF3FF" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -135,7 +135,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4">
+                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -152,7 +152,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#ECFFEC">
+                        <Button Width="100" Height="140" Margin="5" Background="#ECFFEC" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -169,7 +169,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4">
+                        <Button Width="100" Height="140" Margin="5" Background="#F2FCE4" BorderThickness="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" 
@@ -216,11 +216,21 @@
                 <!-- Product Sections -->
                 <StackPanel Grid.Row="3" Margin="10">
 
-                    <!-- Popular Products Section -->
-                    <TextBlock Text="Popular Recipe" FontSize="20" FontWeight="Bold" Margin="10"/>
+                    <Border Background="#F5F7F8" 
+                            BorderBrush="#D1D1D1" 
+                            CornerRadius="10" 
+                            Padding="10" 
+                            Margin="10">
+                        <TextBlock Text="Popular Recipe" 
+                                   FontSize="25" 
+                                   FontWeight="Bold" 
+                                   VerticalAlignment="Center" 
+                                   HorizontalAlignment="Left"/>
+                    </Border>
+
                     <WrapPanel>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -251,7 +261,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -282,7 +292,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -313,7 +323,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -344,7 +354,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -375,7 +385,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -406,7 +416,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -437,7 +447,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -472,16 +482,26 @@
                     </WrapPanel>
 
                     <!-- Daily Best Sells Section -->
-                    <TextBlock Text="Daily Best Recipe" FontSize="20" FontWeight="Bold" Margin="10"/>
+                    <Border Background="#F5F7F8" 
+                            BorderBrush="#D1D1D1" 
+                            CornerRadius="10" 
+                            Padding="10" 
+                            Margin="10">
+                        <TextBlock Text="Popular Recipe" 
+                                   FontSize="25" 
+                                   FontWeight="Bold" 
+                                   VerticalAlignment="Center" 
+                                   HorizontalAlignment="Left"/>
+                    </Border>
                     <WrapPanel>
 
-                        <Border CornerRadius="10" Margin="10" Width="800" Height="300" HorizontalAlignment="Center">
+                        <Border CornerRadius="10" Margin="10" Width="810" Height="300" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Image/Dashbord/BannerFood.png" Stretch="UniformToFill"/>
                             </Border.Background>
                         </Border>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -512,7 +532,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -543,7 +563,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -574,7 +594,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -605,7 +625,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -636,7 +656,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -667,7 +687,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -698,7 +718,7 @@
                             </StackPanel>
                         </Button>
 
-                        <Button Width="193" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
+                        <Button Width="197" Height="250" Margin="5" Background="Beige" BorderBrush="Transparent" BorderThickness="1" Padding="0">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}"
@@ -729,14 +749,14 @@
                             </StackPanel>
                         </Button>
 
-                        <Border CornerRadius="10" Margin="10" Width="800" Height="300" HorizontalAlignment="Center">
+                        <Border CornerRadius="10" Margin="10" Width="810" Height="300" HorizontalAlignment="Center">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Image/Home/fastfoodbanner.jpg" Stretch="UniformToFill"/>
                             </Border.Background>
                         </Border>
 
                         <!---Foolter-->
-                        <Border CornerRadius="10" Margin="10" Width="800" Height="300" HorizontalAlignment="Center">
+                        <Border CornerRadius="10" Margin="10" Width="810" Height="300" HorizontalAlignment="Center">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Image/Home/footer.png" Stretch="UniformToFill"/>
                             </Border.Background>
