--- a/Dashboard/BookMenu/Somlorkorkor.xaml
+++ b/Dashboard/BookMenu/Somlorkorkor.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RecipeCookbook.Dashboard.BookMenu.KhmerNodle"
+﻿<UserControl x:Class="RecipeCookbook.Dashboard.BookMenu.Somlorkorkor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Hidden">
             <!-- Content goes here -->
-            <TextBlock Text="Hello" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
+            <TextBlock Text="Good night" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"/>
         </ScrollViewer>
     </Grid>
 </UserControl>
