--- a/Dashboard/Navigetion/Dashboard1.xaml
+++ b/Dashboard/Navigetion/Dashboard1.xaml
@@ -10,41 +10,37 @@
 
 
         <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden">
-            <StackPanel Grid.Column="1" Margin="10">
-                <Grid Margin="10">
+            <StackPanel Margin="10">
+                <Grid Margin="10" Height="100">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                
-                    <Border Background="#4A4E69" 
-                            CornerRadius="10" Margin="5">
-                        <StackPanel>
-                            <TextBlock Text="ORDERS" Foreground="White" FontSize="14" Margin="10" Width="61" HorizontalAlignment="Left"/>
-                            <TextBlock Text="31.5k" Foreground="White" FontSize="24" FontWeight="Bold" Margin="10" Width="70" HorizontalAlignment="Left"/>
-                            <StackPanel>
-                            </StackPanel>
-                        </StackPanel>
+
+                    <Border CornerRadius="10" Margin="5" BorderThickness="0">
+                        <Border.Background>
+                            <ImageBrush ImageSource="/Image/Dashbord/khmer.jpeg"/>
+                        </Border.Background>
                     </Border>
-                    <Border Background="#4A4E69" CornerRadius="10" Margin="5" Grid.Column="1">
-                        <StackPanel>
-                            <TextBlock Text="SALES" Foreground="White" FontSize="14" Margin="10"/>
-                            <TextBlock Text="87.2k" Foreground="White" FontSize="24" FontWeight="Bold" Margin="10"/>
-                        </StackPanel>
+
+                    <Border CornerRadius="10" Margin="5" Grid.Column="1" BorderThickness="0">
+                        <Border.Background>
+                            <ImageBrush ImageSource="/Image/Dashbord/khmer1.jpg"/>
+                        </Border.Background>
                     </Border>
-                    <Border Background="#4A4E69" CornerRadius="10" Margin="5" Grid.Column="2">
-                        <StackPanel>
-                            <TextBlock Text="PRODUCTS" Foreground="White" FontSize="14" Margin="10"/>
-                            <TextBlock Text="12.6k" Foreground="White" FontSize="24" FontWeight="Bold" Margin="10"/>
-                        </StackPanel>
+
+                    <Border CornerRadius="10" Margin="5" Grid.Column="2" BorderThickness="0">
+                        <Border.Background>
+                            <ImageBrush ImageSource="/Image/Dashbord/khmer2.jpg"/>
+                        </Border.Background>
                     </Border>
-                    <Border Background="#4A4E69" CornerRadius="10" Margin="5" Grid.Column="3">
-                        <StackPanel>
-                            <TextBlock Text="USERS" Foreground="White" FontSize="14" Margin="10"/>
-                            <TextBlock Text="92.8k" Foreground="White" FontSize="24" FontWeight="Bold" Margin="10"/>
-                        </StackPanel>
+
+                    <Border CornerRadius="10" Margin="5" Grid.Column="3" BorderThickness="0">
+                        <Border.Background>
+                            <ImageBrush ImageSource="/Image/Dashbord/khmer3.jpg"/>
+                        </Border.Background>
                     </Border>
                 </Grid>
 
@@ -79,19 +75,25 @@
                         <!-- Second Item -->
                         <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="10" Margin="10" Width="250" Height="250">
                             <Border.Background>
-                                <ImageBrush ImageSource="/Image/Dashbord/slidefood.png" Stretch="UniformToFill"/>
+                                <ImageBrush ImageSource="/Image/Dashbord/allFood.jpg" Stretch="UniformToFill"/>
                             </Border.Background>
                         </Border>
 
                         <!-- Third Item -->
                         <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="10" Margin="10" Width="250" Height="250">
                             <Border.Background>
-                                <ImageBrush ImageSource="/Image/Dashbord/slidefood.png" Stretch="UniformToFill"/>
+                                <ImageBrush ImageSource="/Image/Dashbord/allFood1.jpeg" Stretch="UniformToFill"/>
                             </Border.Background>
                         </Border>
                     </UniformGrid>
 
                 </StackPanel>
+
+                <Border CornerRadius="10" Margin="10" Width="800" Height="1100" HorizontalAlignment="Center">
+                    <Border.Background>
+                        <ImageBrush ImageSource="/Image/Dashbord/slide1.jpg" Stretch="UniformToFill"/>
+                    </Border.Background>
+                </Border>
 
                 <Border CornerRadius="10" Margin="10" Width="800" Height="1100" HorizontalAlignment="Center">
                     <Border.Background>
